# diesel_joinable_composite_fk

./: .env  Cargo.toml  diesel.toml
migrations/2022-12-12-190423_create_tables/: down.sql  up.sql
src/: schema.patch  schema.rs
