[package]
name = "diesel_fk2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["32-column-tables", "chrono", "numeric", "postgres", "r2d2", "without-deprecated"], default-features = false }
